Внес изменения после ревью